IDP-1476 - Need a filter to append SameSite to cookies
https://issues.shibboleth.net/jira/browse/IDP-1476

Add explicit Null to enum to enable configuration override.